Big progress on the IE8 and iPad layout issues. Primarily I was able to get IE8 to properly inherit all of the breakpoint layouts.  Yay.

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -100,7 +100,7 @@ $indent-amount: 30px;
 
 @mixin breakpoint($point) {
   @if $point == narrow {
-    @media only screen and (max-width: 599px) { 
+    @media only screen and (max-width: 724px) { 
    		$zen-column-count: 1;
     	$zen-gutter-width: 10px;
     	@content;
@@ -108,17 +108,8 @@ $indent-amount: 30px;
 
   }
 
-  @if $point == medium {
-    @media only screen and (min-width : 600px) { 
-   		$zen-column-count: 40;
-    	$zen-gutter-width: 10px;
-    	@content;
-    }
-
-  }
-
   @if $point == widest {
-    @media only screen and (min-width: 801px) { 
+    @media only screen and (min-width: 725px) { 
    		$zen-column-count: 40;
     	$zen-gutter-width: 20px;
     	@content;
@@ -129,14 +120,28 @@ $indent-amount: 30px;
 
 }
 
-@mixin widest{
-  @include breakpoint(widest){
-    @content;
-  }
-  .lt-ie9 {
-    @content;
+@mixin narrow{
+  html{
+    @include breakpoint(narrow){
+      @content;
+    }
+    .lt-ie9 & {
+      @content;
+    }
   }
 }
+
+@mixin widest{
+  html{
+    @include breakpoint(widest){
+      @content;
+    }
+    .lt-ie9 & {
+      @content;
+    }
+  }
+}
+
 
 
 //
