--- a/sass/navigation.scss
+++ b/sass/navigation.scss
@@ -92,7 +92,7 @@ li a.active {
   .menu{
     li{
       float:left;
-      padding-right:10px;
+      padding-right:5px;
       background-color:black;
       .outerContainer{
         height:35px;
@@ -222,7 +222,7 @@ body{
 //
 // Narrow (Mobile, phones, etc...)
 // 
-@include breakpoint(narrow){
+@include narrow {
   .dupe{
     display:none;
   }
@@ -340,36 +340,11 @@ body{
   }
 } // /breakpoint(narrow)
 
-//
-//  Fauxbile (Not quite a phone, not quite a desktop)
-//
-
-@include breakpoint(medium){
-  #header{
-    #header-center{
-      #global-menu{
-        .menu{
-          li.expanded{
-            .menu{
-              display:none;
-              li{
-                float:none;
-              }
-            }
-          }
-          li:hover > div div div .menu{
-            display:block;
-          }
-        } 
-      }
-    }
-  }
-}
 
 //
 // Wide (Desktops and the like)
 //
-@include breakpoint(widest){
+@include widest {
 
 
   /*
